--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,8 @@ services:
   web: 
     build: ./client
     ports:
-      - "5173:3000"
+      - "80:3000"
     depends_on:
       - server
+    env_file:
+      - ./client/.env.local
